# annoscr

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.yaml  CONTRIBUTING.md  README.md  eslint.config.ts  meson.build  meson.options  package-lock.json  package.json  tsconfig.json
build-aux/: clean.sh  dist.sh  lint-deb.sh  set-version.sh  sign.sh  xgettext-0.26.ini.example  xgettext.ini.example
data/: annoscr.1  com.cmphys.Annoscr.desktop.in  com.cmphys.Annoscr.metainfo.xml.in  com.cmphys.Annoscr.mime.xml  com.cmphys.Annoscr.service.in  meson.build
debian/: changelog  control  copyright  rules
docs/: PACKAGING.md
packaging/arch/: PKGBUILD
packaging/rpm/: annoscr.rpmlintrc  annoscr.spec
po/: POTFILES  annoscr.pot
src/: a11y.ts  actions.ts  annoscr.in  application.ts  canvas_view.ts  dialogs.ts  document.ts  exporter.ts  font_catalogue.ts  gdk_color.ts  globals.d.ts  i18n.ts  image_loader.ts  image_transforms.ts  main.ts  meson.build  preferences.ts  screenshot.ts  settings.ts  shortcuts_dialog.ts  style_bar.ts  text_editor.ts  tool_bar.ts  validators.ts  version.d.ts  window.ts  window_constants.ts  zoom_controller.ts
